--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
-    color: rgb(255, 175, 2);
+    color: #FF9900;
     background: #fff;
     text-align: center;
 }
