--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,6 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
     color: #FF9900;
-    background: #fff;
+    background: #EDBD11;
     text-align: center;
 }
