--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
-    color: #FF9900;
+    color: #F0F0F0;
     background: #EDBD11;
     text-align: center;
 }
