--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,8 @@ body {
     padding: 0;
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
-    color: #EDBD11;
-    background: #F0F0F0;
+    color: #333;
+    background: #ffffff;
     text-align: left;
     
 }
