--- a/style3.css
+++ b/style3.css
@@ -8,10 +8,38 @@ h3 {
 h1 {
     color: rgb(0, 0, 0);
     font-size: 28px;
+    font-family: 'Arial', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 1;
+    margin-top: 1;
+    margin-left: 0;
+    text-transform: lowercase;
+    font-style:initial;
+}
+
+h2 {
+    color: rgb(0, 0, 0);
+    font-size: 18px;
     font-family: 'Open Sans', sans-serif;
     font-weight: bold;
     text-align: center;
-    margin-bottom: 0;
-    margin-top: 0;
+    margin-bottom: 1;
+    margin-top: 1;
     margin-left: 0;
+    text-transform: lowercase;
+    font-style:initial;
+}
+
+p {
+    color: rgb(0, 0, 0);
+    font-size: 14px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 1;
+    margin-top: 1;
+    margin-left: 0;
+    text-transform: lowercase;
+    font-style:initial;
 }
