--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,42 @@ body {
     font-size: 14px;
     color: #333;
     background: #ffffff;
+    font-style: normal;
     text-align: left;
     
+}
+
+h1 {
+    color: rgb(0, 0, 0);
+    font-size: 28px;
+    font-family: 'Arial', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 1;
+    margin-top: 1;
+    margin-left: 0;
+    text-transform: lowercase;
+    font-style:initial;
+}
+
+h2 {
+    color: rgb(0, 0, 0);
+    font-size: 16px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 1;
+    margin-top: 1;
+    margin-left: 0;
+}
+
+p {
+    color: rgb(0, 0, 0);
+    font-size: 14px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 1;
+    margin-top: 1;
+    margin-left: 0;
 }
