--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
 h1 {
     color: rgb(0, 0, 0);
     font-size: 28px;
-    font-family: 'Arial', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
+    font-family: 'Open Sans', sans-serif;
     font-weight: bold;
     text-align: center;
     margin-bottom: 1;
@@ -24,7 +24,7 @@ h1 {
 }
 
 h2 {
-    color: rgb(0, 0, 0);
+    color: rgb(218, 22, 22);
     font-size: 16px;
     font-family: 'Open Sans', sans-serif;
     font-weight: bold;
@@ -38,7 +38,6 @@ p {
     color: rgb(0, 0, 0);
     font-size: 14px;
     font-family: 'Open Sans', sans-serif;
-    font-weight: bold;
     text-align: center;
     margin-bottom: 1;
     margin-top: 1;
