--- a/style3.css
+++ b/style3.css
@@ -20,10 +20,20 @@ h2 {
     margin-bottom: 1;
     margin-top: 1;
     margin-left: 0;
-    text-transform: lowercase;
     font-style:initial;
 }
 
+h3 {
+    color: rgb(0, 0, 0);
+    font-size: 14px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: bold;
+    text-align: left;
+    margin-bottom: 1;
+    margin-top: 1;
+    margin-left: 0;
+    font-style:initial;
+}
 p {
     color: rgb(0, 0, 0);
     font-size: 14px;
@@ -33,6 +43,17 @@ p {
     margin-bottom: 1;
     margin-top: 1;
     margin-left: 0;
-    text-transform: lowercase;
+    font-style:initial;
+}
+
+a1 {
+    color: rgb(0, 0, 0);
+    font-size: 14px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 1;
+    margin-top: 1;
+    margin-left: 0;
     font-style:initial;
 }
